--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8" />
     <title>Cave Adventure</title>
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="/src/index.js"></script>
+  </body>
 </html>
