--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Cave Adventure</title>
   </head>
-  <body>
+  <body style="background-color: black">
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
